cutting procedures for mir and milp cuts are added to DcTreeNode::process function.

--- a/Makefile.in
+++ b/Makefile.in
@@ -144,6 +144,8 @@ CGL_CFLAGS = @CGL_CFLAGS@
 CGL_LIBS = @CGL_LIBS@
 COLA_CFLAGS = @COLA_CFLAGS@
 COLA_LIBS = @COLA_LIBS@
+CONICCGL_CFLAGS = @CONICCGL_CFLAGS@
+CONICCGL_LIBS = @CONICCGL_LIBS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CXX = @CXX@
